--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -19,11 +19,8 @@ body {
 }
 
 h1 {
-    width: 94%;
-    padding-top: 17px;
-    padding-left: 3%;
     font-size: 24px;
-    color: #eeeeee;
+    display: inline;
 }
 
 h2 {
@@ -84,30 +81,57 @@ button {
     background-color: #d4edda;
 }
 
-#flush_error{
-    width:100%;
-    padding-top:28px;
-    padding-left:2%;
-    padding-bottom:28px;
-    margin-bottom:15px;
-    color:#721c24;
-    background-color:#f8d7da;
+#flush_error {
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #721c24;
+    background-color: #f8d7da;
 }
-table#employee_list th{
+
+table#employee_list th {
     width: 30%;
     padding: 10px 2%;
 }
 
-table#employee_list td{
+table#employee_list td {
     width: 29%;
     padding: 10px 2%;
 }
-tr.row1{
+
+tr.row1 {
     background-color: #f2f2f2;
 }
-tr.row{
+
+tr.row {
     background-color: #ffffff;
 }
-select{
+
+select {
     height: 30px;
+}
+
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
 }
